--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "async": "1.2.1",
+    "async": "^1.5.0",
     "fluent-ffmpeg": "2.0.1",
     "progress-stream": "^1.1.1",
-    "ytdl-core": "0.5.1"
+    "ytdl-core": "^0.7.8"
   },
   "author": {
     "name": "TobiLG"
