--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "youtube-mp3-downloader",
-  "version": "0.4.4",
+  "version": "0.5.0",
   "description": "Downloads Youtube videos (in parallel, as streams), encodes the audio data as mp3 and stores them in a defineable location",
   "keywords": [
     "youtube",
@@ -18,10 +18,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "async": "^1.5.0",
-    "fluent-ffmpeg": "2.0.1",
-    "progress-stream": "^1.2.0",
-    "ytdl-core": "^0.7.9"
+    "async": "^2.4.0",
+    "fluent-ffmpeg": "2.1.2",
+    "progress-stream": "^2.0.0",
+    "ytdl-core": "^0.14.1"
   },
   "author": {
     "name": "TobiLG"
@@ -31,14 +31,9 @@
     "url": "git://github.com/tobilg/youtube-mp3-downloader.git"
   },
   "engines": {
-    "node": ">=0.10.14"
+    "node": ">=4.0.0"
   },
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "https://github.com/tobilg/youtube-mp3-downloader/blob/master/LICENSE"
-    }
-  ],
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/tobilg/youtube-mp3-downloader/issues"
   }
