fixed invalid filenames from title

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "async": "^2.6.0",
     "fluent-ffmpeg": "2.1.2",
     "progress-stream": "^2.0.0",
+    "sanitize-filename": "^1.6.1",
     "ytdl-core": "^0.20.1"
   },
   "author": {
