--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
   },
   "dependencies": {
     "async": "^3.2.2",
-    "fluent-ffmpeg": "2.1.2",
+    "fluent-ffmpeg": "^2.1.2",
     "progress-stream": "^2.0.0",
     "sanitize-filename": "^1.6.3",
-    "ytdl-core": "^4.9.1"
+    "ytdl-core": "^4.11.0"
   },
   "author": {
     "name": "ytb2mp3"
